# nickmoreton.co.uk

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  Procfile  README.md  app.json  biome.json  docker-compose.production.yaml  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docker/: Dockerfile  nginx.production.conf
docs/: data-and-media.md  linode.dokku.md  local.dokku.md  local.production.md
docs/files/: dokku-setup.sh
scripts/: dokku-setup.sh  images.js  server.js
webapp/: urls.py  wsgi.py
webapp/pages/templates/blocks/: code.html
webapp/settings/: base.py
webapp/static_src/scripts/: index.js  nav.js
webapp/static_src/styles/: _layout.scss
webapp/static_src/styles/components/: _code_blocks.scss
webapp/templates/: base.html
