[project]
name = "nickmoreton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.2.0",
    "django>=5.1.15,<5.2",
    "django-browser-reload>=1.18.0",
    "django-storages[s3]>=1.14.5",
    "gunicorn>=23.0.0",
    "psycopg2>=2.9.10",
    "requests==2.33.0",
    "wagtail>=7.2,<7.3",
    "wagtail-unveil",
    "whitenoise==6.9.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "django-upgrade>=1.23.1",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "pre-commit>=4.1.0",
    "pyupgrade>=3.19.1",
]

[tool.uv.sources]
wagtail-unveil = { git = "https://github.com/nm-packages/wagtail-unveil" }
