[project]
name = "nickmoreton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.4,<6.1",
    "django-browser-reload>=1.21.0",
    "django-storages[s3]>=1.14.6",
    "gunicorn>=25.3.0",
    "psycopg2>=2.9.11",
    "requests==2.33.1",
    "wagtail>=7.3.1,<7.4",
    "wagtail-unveil>=0.1.0a7",
    "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "django-upgrade>=1.30.0",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pyupgrade>=3.21.2",
]
