[project]
name = "nickmoreton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.4,<6.1",
    "django-browser-reload>=1.21.0",
    "django-storages[s3]>=1.14.6",
    "gunicorn>=25.3.0",
    "psycopg2>=2.9.12",
    "requests==2.33.1",
    "wagtail>=7.3.1,<7.4",
    "wagtail-unveil>=0.1.0a7",
    "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
    "django-upgrade>=1.30.0",
    "pre-commit>=4.6.0",
    "pyupgrade>=3.21.2",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
